--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,22 @@
     box-sizing: border-box;
 }
 
+[data-theme='dark'] {
+    --background: #000;
+    --primary: #23d423;
+    --text: #5234f3;
+}
+[data-theme='light'] {
+    --background: #fff;
+    --primary: #5d12c5;
+    --text: #08041c;
+}
+
 body {
     display: flex;
     flex-direction: column;
+    background-color: var(--background);
+    color: var(--text);
 }
 
 /* TODO HEADER */
@@ -33,7 +46,7 @@ header {
 }
 
 .darkModeSwitch {
-    background-color: var(--background);
+    background-color: var(--primary);
     display: flex;
     position: relative;
     cursor: pointer;
@@ -41,7 +54,7 @@ header {
     border: none;
     border-radius: 30px;
     justify-content: space-between;
-    padding-right: 30px;
+    margin-right: 30px;
     align-items: center;
 }
 
@@ -55,12 +68,12 @@ header {
 }
 
 i.fa-regular.fa-moon, i.fa-regular.fa-sun {
-    color: #000;
+    color: var(--background);
 }
 
 .darkModeSwitch::after {
     display: block;
-    background: #000;
+    background: var(--text);
     width: 30px;
     height: 30px;
     position: absolute;
@@ -73,7 +86,7 @@ i.fa-regular.fa-moon, i.fa-regular.fa-sun {
 }
 
 .darkModeSwitch.active {
-    background-color: aqua;
+    background-color: var(--primary);
 }
 
 .fa-regular.fa-sun,.fa-regular.fa-moon {
